rename folder css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- My Syle -->
-    <link rel="stylesheet" href="css/Style.css" />
+    <link rel="stylesheet" href="CSS/Style.css" />
   </head>
   <body>
     <!-- navbar star -->
